--- a/index.html
+++ b/index.html
@@ -8,34 +8,37 @@
   </head>
 
   <body>
-    <div class="container">
-      <nav class="options-box">
-          <h3>Country filter</h3>
-          <select id="country-filter" data-bind="options: countrySelect, value: selectedCountryValue"></select>
-          <h3>List view</h3>
+
+    <main>
+      <nav id="drawer" class="options-box">
+        <h3>Country filter</h3>
+        <select id="country-filter" data-bind="options: countrySelect, value: selectedCountryValue"></select>
+        <h3>List view</h3>
           <ul data-bind="foreach: teamList">
             <li data-bind="click: $root.setClick">
               <p>
-                <span data-bind="text: $data.name"></span>
+                <a><span data-bind="text: $data.name"></span></a>
               </p>
             </li>
           </ul>
       </nav>
+      <a id="menu">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M2 6h20v3H2zm0 5h20v3H2zm0 5h20v3H2z"/>
+        </svg>
+      </a>
       <div id="map"></div>
-    </div>
+    </main>
 
     <script src = "js/libs/jquery.min.js"></script>
     <script src = "js/libs/knockout-3.4.2.js"></script>
     <script src = "js/mapstyle.js"></script>
-    <!-- <script src = "js/model.js"></script>
-    <script src = "js/app.js"></script> -->
-    <script src = "js/cached_data.js"></script>
-    <script src = "js/cached_app.js"></script>
+    <script src = "js/model.js"></script>
+    <!-- <script src = "js/model_cached.js"></script> -->
+    <script src = "js/app.js"></script>
 
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlwjpuXkYPyLd6xiHyuwASmB3Ds01P9wc&v=3&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlwjpuXkYPyLd6xiHyuwASmB3Ds01P9wc&v=3&callback=start" onerror="errorHandlers.errGoogleMaps()">
     </script>
   </body>
 </html>
-
- <!-- onerror="errorHandlers.errGoogleMaps()" -->
